Basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section id="user">
 
+  </section>
+
+  <section id="content">
+    <div id="german-word"></div>
+    <div id="english-word"></div>
+    <div id="part-of-speech-classifier">
+      <!--
+      noun
+      verb
+      adjective
+      adverb
+      pronoun
+      preposition
+      conjunction
+      interjection
+      determiner
+-->
+    </div>
+    <div id="gender">
+
+    </div>
+  </section>
 </body>
 </html>
